--- a/detalle.html
+++ b/detalle.html
@@ -23,7 +23,8 @@
         const clienteIndex = params.get('cliente');
         
         // Obtener los datos del cliente
-        const cliente = JSON.parse(localStorage.getItem('clientes'))[clienteIndex];
+        const clientes = JSON.parse(localStorage.getItem('clientes'));
+        const cliente = clientes[clienteIndex];
 
         // Mostrar los datos en la tabla
         const detalleCliente = document.getElementById('detalle-cliente');
@@ -36,3 +37,4 @@
     </script>
 </body>
 </html>
+
