--- a/index.html
+++ b/index.html
@@ -47,16 +47,16 @@
                 <!-- Filas de datos aquí -->
             </tbody>
         </table>
-    </div>
 
-    <canvas id="graficoProbabilidad" width="400" height="200"></canvas>
+        <canvas id="graficoProbabilidad" width="400" height="200"></canvas>
+    </div>
 
     <footer>
         <p>&copy; 2024 Tu Empresa. Todos los derechos reservados.</p>
     </footer>
 
     <script src="script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </body>
 </html>
-
 
