--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             cursor: pointer; /* Cambia el cursor en las cabeceras */
         }
         table tr:hover {
-            background-color: #f1f1f1; /* Resaltar la fila al pasar el mouse */
+            background-color: #d1ecf1; /* Cambiar el fondo al pasar el mouse (color claro) */
         }
         table tr {
             cursor: pointer; /* Cambia el cursor en las filas de la tabla */
