--- a/index.html
+++ b/index.html
@@ -25,9 +25,11 @@
         }
         table th {
             cursor: pointer; /* Cambia el cursor en las cabeceras */
+            background-color: #007bff; /* Fondo azul para los encabezados */
+            color: white; /* Texto en blanco para los encabezados */
         }
         table th:hover {
-            background-color: inherit; /* Evita que el encabezado cambie de color al pasar el mouse */
+            background-color: #0056b3; /* Fondo azul oscuro al pasar el mouse sobre el encabezado */
         }
         table tr {
             cursor: pointer; /* Cambia el cursor en las filas de la tabla */
@@ -80,3 +82,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
