--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             cursor: pointer; /* Cambia el cursor en las filas de la tabla */
         }
         table tr:nth-child(odd) {
-            background-color: #f8f9fa; /* Fondo claro para filas impares */
+            background-color: #ffffff; /* Fondo blanco para filas impares */
         }
         table tr:nth-child(even) {
             background-color: #e9ecef; /* Fondo gris para filas pares */
