--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
             cursor: pointer; /* Cambia el cursor en las filas de la tabla */
         }
         table tr:nth-child(odd) {
-            background-color: #ffffff; /* Fondo blanco para filas impares */
+            background-color: #ffffff !important; /* Fondo blanco para filas impares */
         }
         table tr:nth-child(even) {
-            background-color: #e9ecef; /* Fondo gris para filas pares */
+            background-color: #e9ecef !important; /* Fondo gris para filas pares */
         }
         table tr:hover {
             background-color: #d1ecf1; /* Cambia a azul claro al pasar el ratón */
@@ -82,4 +82,3 @@
     <script src="script.js"></script>
 </body>
 </html>
-
