--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
             cursor: pointer; /* Cambia el cursor en las filas de la tabla */
         }
         table tr:nth-child(odd) {
-            background-color: #ffffff !important; /* Fondo blanco para filas impares */
+            background-color: #ffffff; /* Fondo blanco para filas impares */
         }
         table tr:nth-child(even) {
-            background-color: #e9ecef !important; /* Fondo gris para filas pares */
+            background-color: #e9ecef; /* Fondo gris para filas pares */
         }
         table tr:hover {
             background-color: #d1ecf1; /* Cambia a azul claro al pasar el ratón */
@@ -49,6 +49,9 @@
         .sorted-desc::after {
             content: ' ▼'; /* Flecha hacia abajo */
         }
+        .filter-input {
+            margin-bottom: 20px; /* Espaciado inferior para el input de filtro */
+        }
     </style>
 </head>
 <body>
@@ -57,6 +60,8 @@
     </header>
     
     <div class="container mt-5">
+        <input type="text" id="filterInput" class="form-control filter-input" placeholder="Filtrar por tipo de póliza...">
+        
         <table class="table table-striped">
             <thead>
                 <tr>
@@ -70,15 +75,12 @@
                 <!-- Filas de datos aquí -->
             </tbody>
         </table>
-
-        <canvas id="graficoProbabilidad" width="400" height="200"></canvas>
     </div>
 
     <footer>
         <p>&copy; 2024 Tu Empresa. Todos los derechos reservados.</p>
     </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
