--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
         table tr:nth-child(even) {
             background-color: #e9ecef; /* Fondo gris para filas pares */
         }
+        table tr:hover {
+            background-color: #d1ecf1; /* Cambia a azul claro al pasar el ratón */
+        }
         .sorted-asc::after {
             content: ' ▲'; /* Flecha hacia arriba */
         }
@@ -81,3 +84,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
