--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     <th id="tipoPolizaHeader" onclick="ordenar('tipoPoliza')">Tipo de Póliza</th>
                     <th id="precioHeader" onclick="ordenar('precio')">Precio</th>
                     <th id="edadHeader" onclick="ordenar('edad')">Edad del Cliente</th>
-                    <th id="probabilidadHeader" onclick="ordenar('probabilidad')">Probabilidad de Retención</th>
+                    <th id="probabilidadHeader" class="sorted-desc" onclick="ordenar('probabilidad')">Probabilidad de Retención</th>
                 </tr>
             </thead>
             <tbody id="tabla-clientes">
@@ -84,4 +84,3 @@
     <script src="script.js"></script>
 </body>
 </html>
-
