--- a/index.html
+++ b/index.html
@@ -24,35 +24,30 @@
             text-align: center;
         }
         table th {
-            cursor: pointer; /* Cambia el cursor en las cabeceras */
-            background-color: #007bff; /* Fondo azul para los encabezados */
-            color: white; /* Texto en blanco para los encabezados */
+            cursor: pointer; 
+            background-color: #007bff; 
+            color: white; 
         }
         table th:hover {
-            background-color: #0056b3; /* Fondo azul oscuro al pasar el mouse sobre el encabezado */
-        }
-        table tr {
-            cursor: pointer; /* Cambia el cursor en las filas de la tabla */
+            background-color: #0056b3; 
         }
         table tr:nth-child(odd) {
-            background-color: #ffffff !important; /* Fondo blanco para filas impares */
+            background-color: #ffffff !important; 
         }
         table tr:nth-child(even) {
-            background-color: #e9ecef !important; /* Fondo gris para filas pares */
+            background-color: #e9ecef !important; 
         }
         table tr:hover {
-            background-color: #d1ecf1 !important; /* Cambia a azul claro al pasar el ratón */
+            background-color: #d1ecf1 !important; 
         }
         .sorted-asc::after {
-            content: ' ▲'; /* Flecha hacia arriba */
-            font-size: 0.8em; /* Tamaño de la flecha */
+            content: ' ▲'; 
         }
         .sorted-desc::after {
-            content: ' ▼'; /* Flecha hacia abajo */
-            font-size: 0.8em; /* Tamaño de la flecha */
+            content: ' ▼'; 
         }
         .filter-input {
-            margin-bottom: 20px; /* Espaciado inferior para el input de filtro */
+            margin-bottom: 20px; 
         }
     </style>
 </head>
@@ -62,11 +57,11 @@
     </header>
     
     <div class="container mt-5">
-        <input type="text" id="filterInput" class="form-control filter-input" placeholder="Filtrar por tipo de póliza...">
+        <input type="text" id="filterInput" class="form-control filter-input" placeholder="Filtrar...">
         
         <table class="table table-striped">
-            <thead id="tabla-encabezados">
-                <!-- Los encabezados se llenarán dinámicamente -->
+            <thead id="tabla-encabezado">
+                <tr></tr> <!-- Las columnas se agregarán dinámicamente aquí -->
             </thead>
             <tbody id="tabla-clientes">
                 <!-- Filas de datos aquí -->
@@ -81,4 +76,3 @@
     <script src="script.js"></script>
 </body>
 </html>
-
